--- a/hooks/src/styles/stylebeforepage.css
+++ b/hooks/src/styles/stylebeforepage.css
@@ -1,19 +1,20 @@
-.pagemain{
+.halamanbefore{
     display: flex;
     /* justify-content: center; */
     flex-direction: column;
     align-items: center;
-    background-color: #ABB6D4;
 }
-.bodymain{
+.tubuhbefore{
     height: 720px;
-    background-color: #C5D3EE;
+    background-color: rgb(105, 105, 226);
     width: 98%;
+    margin: 1rem 0;
+    border-radius: 5px;
     /* display: flex;
     justify-content: center; */
 
 }
-.mainconten{
+.utamabefore{
     /* background-color: white; */
-    color: #3A5D70;
+    color: white;
 }
