--- a/hooks/src/styles/homebefore.css
+++ b/hooks/src/styles/homebefore.css
@@ -35,7 +35,7 @@
 .image img{
     width: 350px;
 }
-.titlehome .btn1{
+.titlehome .btn1, .btn2{
     border: 1px solid;
     padding: 5px 7px;
     border-color: #575fcf;
@@ -47,25 +47,28 @@
     text-decoration: none;
     font-size: 15px;
 }
-.titlehome .btn2{
-    border: 1px solid;
+/* .titlehome .btn2{
+    border: 1px solid ;
     padding: 5px 7px;
-    border-color: #575fcf;
-    background-color: #575fcf;
+    border-color: #416079;
     border-radius: 5px;
     color: white;
     margin: 0 .5rem;
     margin-left: 0px;
     text-decoration: none;
     font-size: 15px;
-}
+    color: #416079;
+} */
 .titlehome .btn1:hover{
     background-color: transparent;
     border-color: #416079;
     color: #416079;
 }
 .titlehome .btn2:hover{
-    background-color: transparent;
-    border-color: #416079;
-    color: #416079;
+    background-color: #575fcf;
+    border-color: #575fcf;
+    color: white;
+}
+svg{
+    bottom: 0px;
 }
