--- a/hooks/src/styles/navbar.css
+++ b/hooks/src/styles/navbar.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Kanit:wght@300&display=swap');
+
 .handle-nav{
     background-color: #1e272e;
     display: flex;
@@ -5,10 +7,11 @@
     align-items: center;
     height: 3rem;
     width: 100%;
+    font-family: 'Kanit', sans-serif;
+    /* position: fixed; */
 }
 .handle-nav .title{
     margin-left: 2rem;
-    margin-bottom: .5rem;
 }
 .handle-nav .title a{
     text-decoration: none;
@@ -27,6 +30,7 @@
 }
 
 .list li .link:hover{
-    background-color: #05c46b;
-    color: #1e272e;
+    /* background-color: #4D5245; */
+    background-color: #416079;
+    /* color: white; */
 }
