--- a/hooks/src/currency.css
+++ b/hooks/src/currency.css
@@ -1,31 +1,105 @@
-/* .current {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    padding-left: 200px;
-    padding-right: 200px;
-} */
-.current{
-    display: flex;
-    flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      height: inherit;
-      padding : 10px 16px; 
-      /* padding: 3px; */
-      box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-     transition: 0.3s;
-}
+    .body{
+        display: flex;
+        justify-content: center;
+        width: inherit;
+        background-color: inherit;
+        height: inherit;
+        
+    }
+    .main{
+        font-family:'Open Sans Condensed', sans-serif;
+        width: 1000px;
+        min-width:250px;
+        height: 650px;
+        min-height: 250px;
+        margin: 15px auto;
+        position: relative;
+    }
+    .hasil{
+        font-size: 18px;
+    }
+    .current{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        height: inherit;
+        padding : 10px 16px; 
+        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+        transition: 0.3s;
+        border: black;
+    }
+    .contain{
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+    }
+    .container{
+        padding: inherit;
+        
+    }
+    .container2{
+        display: flex;
+        justify-content: center;
+    }
+    
+    .contInput{
+        display: flex;
+        justify-content: center;
+    }
+    .container3{
+        display: flex;
+        flex-direction: column;
+        padding: 20px;
+    }
+    .select {
+        /* appearance: none; */
+        background-color: white;
+        /* border: none; */
+        padding: 0 1em 0 0;
+        margin: 0;
+        width: 100%;
+        font-family: inherit;
+        font-size: inherit;
+        /* cursor: inherit; */
+        line-height: inherit;
+        /* width: px;
+        height: 40px; */
+    }
 
-p{
-    justify-content: center;
-}
- input, select { 
+    p{
+    text-align: center;
+    }
+
+    /* input, select { 
     padding: 0;
     margin: 0;
     outline: none;
     font-family: Roboto, Arial, sans-serif;
     font-size: 16px;
+    } */
+
+    .button {
+        border: none;
+        color: white;
+        padding: 14px 28px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 16px;
+        margin: 2px 2px;
+        transition-duration: 0.4s;
+        cursor: pointer;
     }
     
+    .button1 {
+        background-color: white; 
+        color: black; 
+        border: 2px solid #4CAF50;
+    }
+      
+    .button1:hover {
+        background-color: #4CAF50;
+        color: white;
+    }
 
