--- a/hooks/src/styles/navbar.css
+++ b/hooks/src/styles/navbar.css
@@ -8,6 +8,8 @@
     height: 3rem;
     width: 100%;
     font-family: 'Kanit', sans-serif;
+    margin-top: -.5rem;
+    margin-bottom: -.5rem;
     /* position: fixed; */
 }
 .handle-nav .title{
