--- a/hooks/src/currency.css
+++ b/hooks/src/currency.css
@@ -1,7 +1,7 @@
 .bodyconverter{
-    background-color: #d3d3d3;
+    background-color: #ffffff;
     width: 100%;
-    height: 400px;
+    height: auto;
 }
 .body{
     background-color: #d3d3d3;
@@ -81,25 +81,42 @@
 .inputform .option .optionmenu1, .optionmenu2{
     margin: 2px .5rem;
 }
-.button {
-    border: none;
-    color: white;
-    padding: 14px 28px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 2px 2px;
-    transition-duration: 0.4s;
+.body2{
+    /* margin-top: ; */
+    width: 100%;
+    height: auto;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    /* background-color: yellow; */
+    align-items: center;
+    font-family: sans-serif;
+}
+.body2 h1{
+    font-family: 'Kanit', sans-serif;
+    font-weight: bolder
+}
+.body2 img{
+    margin-top: 2rem;
+}
+.buttonsub .btn1 {
+    font: inherit;
+    border: 1px solid #333;
+    background-color: #333;
+    color: rgb(255, 255, 255);
+    padding: 0.75rem 3.5rem;
     cursor: pointer;
-}
-
-.button {
-    background-color: white; 
-    color: black; 
-    border: 2px solid #3f9742;
-}
-.button:hover {
+    font-size: 1.15rem;
+    border-radius: 30px;
+  }
+  
+.buttonsub .btn1:hover {
+    font: inherit;
+    border: 1px solid #416079;
     background-color: #416079;
-    color: white;
+    color: rgb(255, 255, 255);
+    padding: 0.75rem 3.5rem;
+    cursor: pointer;
+    font-size: 1.15rem;
+    border-radius: 30px;
 }
