--- a/hooks/src/styles/coinComponent.css
+++ b/hooks/src/styles/coinComponent.css
@@ -5,30 +5,33 @@
 .coin-container {
     display: flex;
     justify-content: center;
-    width: 80%;
+    width: 100%;
     /* margin-top: 5rem; */
     /* background-color: black; */
   }
   .pembungkus-coin-container{
     display: flex;
     justify-content: center;
+    background-color: #d3d3d3;
   }
   .coin-row {
     display: flex;
     flex-direction: row;
     justify-content: start;
     align-items: center;
+    margin-top: .5rem;
     height: 80px;
     border-bottom: 1px solid #d7d7d7;
-    width: 900px;
+    width: 85%;
+    background-color: #ffffff;
   }
   
   .coin {
     display: flex;
     align-items: center;
     padding-right: 24px;
-  
     min-width: 300px;
+    padding-left: 1rem;
   }
   
   .coin h1 {
@@ -51,6 +54,7 @@
     text-align: right;
     justify-content: space-between;
     width: 100%;
+    margin-right: 1rem;
   }
   
   .coin-price {
