--- a/hooks/src/currency.css
+++ b/hooks/src/currency.css
@@ -8,6 +8,7 @@
 }
 
 .body .titleconvert h1{
+    margin: 2rem 0px;
     /* display: flex;
     justify-content: center; */
     text-align: center;
